# self-recognition

./: .env.example  .gitignore  README.md  analyze_bias_percentage.py  config.example.yaml  config.yaml.100  config.yaml.500  existence_config.yaml  pyproject.toml  run_existence.sh  statistical_analysis.py  test_existence_experiment.py
instructions/: DetailedInstruction.md  EXISTENCE_EXPERIMENT.md  METRICS.md
src/: __init__.py  cli.py  config.py  corpus_generator.py  evaluator.py  existence_evaluator.py  openrouter_client.py  visualizer.py
